# library_system_forum

./: .gitignore  README.md  pyproject.toml
.kube/: build_forum_image.sh  start.sh
.kube/app/: credentials.yaml  values.yaml
.kube/app/templates/: NOTES.txt  configmap.yaml  forum.yaml  postgres.yaml  secrets.yaml
deployment/prod/: Dockerfile
src/: conf.py  datastructures.py  dependencies.py  exceptions.py  main.py  routers.py  schemas.py  utils.py
src/database/: crud_factory.py  models.py  validation_schemas.py
tests/: conftest.py
tests/test_routers/: conftest.py  test_post_router.py  test_topic_router.py
