[tool.poetry]
name = "forum"
version = "0.1.0"
package-mode = false
description = ""
authors = ["ndestrieux <n.destrieux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.115"
sqlalchemy = "~2.0"
pydantic-settings = "~2.6"
psycopg2-binary = "~2.9"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pyjwt = "~2.10"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "~4.0"
pytest = "~8.3"
pytest-asyncio = "~0.24"
pytest-env = "~1.1"
faker = "~36.1"
freezegun = "~1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins.dotenv]
ignore = "false"
location = "./src/.env"


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v -ra -q"
minversion = "6.0"
env = [
    "which_db=sqlite",
    "db_username=test_user",
    "db_password=test_pass",
    "db_name=test_forum.sqlite3",
    "jwt_secret=test_secret",
    "jwt_alg=HS256"
]
